<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <android.support.v4.view.ViewPager
        android:id="@+id/vp_content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/v_line" />

    <View
        android:id="@+id/v_line"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:layout_above="@+id/rg_menu"
        android:background="@color/gray_cccccc" />

    <RadioGroup
        android:id="@+id/rg_menu"
        android:layout_width="match_parent"
        android:layout_height="@dimen/main_bottom_menu_height"
        android:layout_alignParentBottom="true"
        android:background="@color/white_f9f9f9"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/rb_menu_news"
            style="@style/main_menu"
            android:checked="true"
            android:drawableTop="@drawable/new_game_recommend_hot_icon"
            android:text="@string/news" />

        <RadioButton
            android:id="@+id/rb_menu_machine"
            style="@style/main_menu"
            android:drawableTop="@drawable/new_game_recommend_hot_icon"
            android:text="@string/machine" />

        <RadioButton
            android:id="@+id/rb_menu_prisoner"
            style="@style/main_menu"
            android:drawableTop="@drawable/new_game_recommend_hot_icon"
            android:text="@string/prisoner" />

        <RadioButton
            android:id="@+id/rb_menu_sport"
            style="@style/main_menu"
            android:drawableTop="@drawable/new_game_recommend_hot_icon"
            android:text="@string/sport" />

        <RadioButton
            android:id="@+id/rb_menu_mine"
            style="@style/main_menu"
            android:drawableTop="@drawable/new_game_recommend_hot_icon"
            android:text="@string/mine" />
    </RadioGroup>

</RelativeLayout>